// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button base demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--primary"
    >
      主要按钮
    </button>
     
    <button
      class="t-button t-button--primary"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-button--dashed"
    >
      虚框按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-button--link"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-button--link t-is-disabled"
      disabled="disabled"
    >
      文字按钮
    </button>
  </div>
</div>
`;

exports[`Button block demo works fine 1`] = `
<div
  class="demo-button-row"
>
  <div
    class="demo-button-col"
  >
    <button
      class="t-button t-button--primary t-size-full-width"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-button--line t-size-full-width"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-button--dashed t-size-full-width"
    >
      虚框按钮
    </button>
  </div>
   
  <div
    class="demo-button-col"
  >
    <button
      class="t-button t-button--warning t-size-full-width"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-button--warning-line t-size-full-width"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-button--link t-size-full-width"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-button--ghost t-size-full-width"
    >
      幽灵按钮
    </button>
  </div>
</div>
`;

exports[`Button icon demo works fine 1`] = `
<div
  class="demo-button-icon"
>
  <div
    class="demo-button-row"
  >
    <div
      class="demo-button-col"
    >
      <button
        class="t-button t-button--primary"
      >
        <i
          class="t-icon t-icon-add"
        />
        <span
          class="t-button__text"
        >
          
        新建
      
        </span>
      </button>
       
      <button
        class="t-button t-button--line"
      >
        <i
          class="t-icon t-icon-cloud-upload"
        />
        <span
          class="t-button__text"
        >
          
        上传文件
      
        </span>
      </button>
    </div>
     
    <div
      class="demo-button-col"
    >
      <button
        class="t-button t-button--primary t-button--icon-only t-button--shape-circle"
      >
        <i
          class="t-icon t-icon-discount"
        />
      </button>
       
      <button
        class="t-button t-button--primary t-button--icon-only t-button--shape-circle"
      >
        <i
          class="t-icon t-icon-cloud-download"
        />
      </button>
    </div>
     
    <div
      class="demo-button-col"
    >
      <button
        class="t-button t-button--line"
      >
        <svg
          class="t-icon t-icon-search"
        >
          <use
            xlink:href="#t-icon-search"
          />
        </svg>
        <span
          class="t-button__text"
        >
          
        Function Icon
      
        </span>
      </button>
       
      <button
        class="t-button t-button--line"
      >
        <svg
          class="t-icon t-icon-search"
        >
          <use
            xlink:href="#t-icon-search"
          />
        </svg>
        <span
          class="t-button__text"
        >
          
        Slot Icon
      
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Button loading demo works fine 1`] = `
<div
  class="button-base"
>
  <button
    class="t-button t-button--primary t-is-loading"
  >
    <i
      class="t-icon t-icon-loading"
    />
    <span
      class="t-button__text"
    >
      
    主按钮
  
    </span>
  </button>
   
  <button
    class="t-button t-button--line t-is-loading"
  >
    <i
      class="t-icon t-icon-loading"
    />
    <span
      class="t-button__text"
    >
      
    次按钮
  
    </span>
  </button>
</div>
`;

exports[`Button render-icon demo works fine 1`] = `
<button
  class="t-button t-button--primary"
>
  <span>
    ×
  </span>
  <span
    class="t-button__text"
  >
    
  主按钮

  </span>
</button>
`;

exports[`Button size demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-size-s t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-size-s t-button--link"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-size-s t-button--ghost"
    >
      幽灵按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-button--link"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-button--ghost"
    >
      幽灵按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-size-l t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-size-l t-button--link"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-size-l t-button--ghost"
    >
      幽灵按钮
    </button>
  </div>
</div>
`;

exports[`Button status demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-button--primary t-is-disabled"
      disabled="disabled"
    >
      主按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-button--line t-is-disabled"
      disabled="disabled"
    >
      次要按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-button--dashed t-is-disabled"
      disabled="disabled"
    >
      虚框按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-button--warning t-is-disabled"
      disabled="disabled"
    >
      告警按钮
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-button--warning-line t-is-disabled"
      disabled="disabled"
    >
      次要告警
    </button>
  </div>
   
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--link"
    >
      链接文字按钮
    </button>
     
    <button
      class="t-button t-button--link t-is-disabled"
      disabled="disabled"
    >
      链接文字按钮
    </button>
  </div>
</div>
`;

exports[`Button theme demo works fine 1`] = `
<div>
  <div
    class="tdesign-demo-block"
  >
    <button
      class="t-button t-button--primary"
    >
      主按钮
    </button>
     
    <button
      class="t-button t-button--line"
    >
      次要按钮
    </button>
     
    <button
      class="t-button t-button--dashed"
    >
      虚框按钮
    </button>
     
    <button
      class="t-button t-button--warning"
    >
      告警按钮
    </button>
     
    <button
      class="t-button t-button--warning-line"
    >
      次要告警
    </button>
     
    <button
      class="t-button t-button--link"
    >
      文字按钮
    </button>
     
    <button
      class="t-button t-button--ghost"
    >
      幽灵按钮
    </button>
  </div>
</div>
`;
